# bpadictionary

./: .secrets.baseline  .travis.yml  pyproject.toml  setup.py
.github/workflows/: dictionary_push.yaml
gdcdictionary/examples/valid/: biospecimen.json  protocol.json  treatment.json
gdcdictionary/old_unused_nodes/: quantification_assay_peak.yaml  quantification_assay_qc.yaml
gdcdictionary/schemas/: _definitions.yaml  _terms.yaml  acknowledgement.yaml  aligned_reads_index.yaml  alignment_workflow.yaml  aliquot.yaml  analyte.yaml  biospecimen.yaml  case.yaml  cell_image.yaml  comorbidity.yaml  contrived_expectation.yaml  core_metadata_collection.yaml  demographic.yaml  diagnosis.yaml  diagnostic_test.yaml  exposure.yaml  family_history.yaml  followup.yaml  fragment_analyzer_peak.yaml  fragment_analyzer_trace.yaml  fragment_analyzer_trace_peak.yaml  immunoassay.yaml  keyword.yaml  mass_cytometry_assay.yaml  mass_cytometry_image.yaml  molecular_tagging_workflow.yaml  pcr_assay.yaml  pcr_assay_file.yaml  protocol.yaml  publication.yaml  quantification_assay.yaml  quantification_assay_peak.yaml  quantification_assay_qc.yaml  read_group.yaml  read_group_qc.yaml  sample.yaml  sequencing_assay.yaml  slide_image.yaml  study.yaml  (+8 more)
gdcdictionary/tsvs/: nodes_bpa.tsv  nodes_schema_bpac.xlsx  variables_bpa.tsv
gdcdictionary/tsvs/back2yaml/: acknowledgement.yaml  aligned_reads_index.yaml  alignment_workflow.yaml  aliquot.yaml  analyte.yaml  biospecimen.yaml  case.yaml  (+35 more)
sandbox/case/: __schema.yaml
sandbox/diagnosis/: __schema.yaml
sandbox/family_history/: __schema.yaml
