[tool.poetry]
name = "gdcdictionary"
version = "0.0.0"
description = "Data Dictionary for BloodPAC"
authors = ["Center for Translational Data Science at the University of Chicago <support@datacommons.io>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
